--- a/analog_programming.html
+++ b/analog_programming.html
@@ -70,13 +70,7 @@ this is the original, with text and without images:
 	<h2>Looking into the correlation between textile production and technological advancement.</h2>
 
 <div class="main">
-	<div class="punchcard">
-		<br>
-		<p style="margin: 30px;">What started with the automatization of loom weaving with the Jacquard loom and 
-				its' operative punchcards to inform of treadle changes, the punchcard system has 
-				moved towards popular use in machine knitting, while project drafting for weaving bears
-				resemblance to the binary system used in early computation.
-	</div>
+
 	<div class="punchcard">
 		<img src="images/jacquard2.jpeg" style="object-fit: contain; height: 80%; width: 90%;">
 		<p style="font-size: 0.8rem; margin: 40px;">Image credit: 'Visite de l'usine de dentelles de Calais' by Gerald Villena, Adobe Stock
@@ -86,9 +80,21 @@ this is the original, with text and without images:
 		<img src="images/jacquard1.jpeg" style="object-fit: contain; height: 70%; width: 90%;">
 		<p style="font-size: 0.8rem; margin: 40px;">Image credit: 'Old jacquard machine, looms for jacquard weaves, enabling to manufacture complex patterns and outstanding linen damasks. Jacquard loom punch card. The revolutionary Vincenzi looms.' by Anna, Adobe Stock
 	</div>
-	<div class="punchcard">
+	<div class="punchcard" style="height: 300px;">
 		<br>
-		<p style="margin: 30px;">While the mechanization of craft propelled 
+		<p style="margin: 30px;">What started with the automatization of loom weaving with the Jacquard loom and 
+				its' operative punchcards to inform of treadle changes, the punchcard system has 
+				moved towards popular use in machine knitting. 
+				<br>While the mechanization of craft propelled the economic decent into capitalism, it removed the craftsperson
+				from the equation, favouring production over protecting highly skilled trade and preserving means of production.
+				It is interesting now to look back on the impact on the approach to thinking of binary programming to instruct the loom 
+				to operate more efficiently independently to lead to early computation. However, this radical rate of industrialization 
+				was strongly opposed by the working class at the time of introduction as it cut their necessity and job prospects drastically.
+				We can still see the impacts today in the attitudes towards 'crafts' that are still typically associated as women's work,
+				particularly textiles. In Ontario, Canada the movement to protect crafts education is a prevalent topic, especially at higher 
+				education levels, as post-secondary institutions face harsh financial cuts. Highly specialized fields that require extensive
+				equipment, space and teaching time have been reduced to 'waste of financing' in the face of a capitalist society, risking the 
+				loss of cultural and community knowledge that is woven into all hand-made fabrics.
 	</div>
 </div>
 
