--- a/punch_lace.html
+++ b/punch_lace.html
@@ -92,10 +92,29 @@ breadcrumbs here with hyperlinks-->
 		
 		<div><img src="images/punchcard1.png"></div>
 		<div> 
-			Punchcard info to be inserted here......
+			<p>The technique punch lace requires you to have two working threads at the same time, where one is a yarn of at least fingering/DK weight
+                and the second one a very fine one such as sewing thread. Punch lace primarily works through the creation of the illusion of lace 
+                like features in the dominant, thick yarn, while the thread ensures the fabric remains stable and to help tension.  
+                The spaces that remain filled on the punch card, indicate the thicker yarn as dominant. The spaces that have been hole-punched create 
+                eyelets/gaps in the thicker yarn where the sewing thread shows through. Depending on the thread you use, it may create different 
+                illusions or how clearly it is visible, but keep in mind that the sewing thread is knitted alongside the thicker yarn, resulting in 
+                the back of the fabric being covered in a layer of the sewing thread - in case you'd like for the back to be visible. A suggestion for the 
+                design would be to not create eyelets too large (maximum 2-3 stitches wide), because the dominant yarn will create floats that may be distracting.
+            </p>
             <br>
-            <img src="images/punchlace_full.svg">
-
+            <img src="images/punchlace_full.svg" style="width: 45vw;">
+            <br> 
+            <br>
+            <br>
+            <p>
+                Steps on the machine:
+                <br>1. Cast-on thicker yarn and knit at least 7 stockinette rows (add weights!), with your carriage on the left hand side, feed the pattern
+                card into the machine and use the dial to roll it through fully - clip the two ends together.
+                <br>2. Thick yarn goes in yarn feeder 1. Thread goes in yarn feeder 2.
+                <br>3. Cam lever 'L', left russell lever forwards (in order to hold D position needles), right russell lever flush with carriage.
+                <br>4. Before running carriage, pull out both selvedge needles - helps to anchor the selvedges
+                <br>4a. NOTE: The selvedge needles need to be reset every other pass of the carriage.
+            </p>
 		</div>
 	</div>
 
