--- a/weaving.html
+++ b/weaving.html
@@ -57,7 +57,7 @@ breadcrumbs here with hyperlinks-->
 <div class="main">
 	<img src="images/waffle_draft.png">
 	<div>
-		Similarly to how punchcards inform a knitting machine of how to control the needles, pattern 
+		<p>Similarly to how punchcards inform a knitting machine of how to control the needles, pattern 
 		drafts for weaving provide a clear visualisation of what warp threads are being lifted and how 
 		they will intersect with the weft yarn. Regardless if you are using a manual loom or a digital/punchcard-based 
 		one such as a Jacquard, it defines what happens at each step and a sketch of what your resulting fabric 
@@ -77,16 +77,18 @@ breadcrumbs here with hyperlinks-->
 		can create varieties of patterns and fabric densities or intricacies.
 		<br>Resulting fabric: Following the filled-in cells of the prior 3 sections, the grid design of the final fabric
 		can be sketched out - or otherwise automatically filled in if using a digital design tool, such as Treadl.com for the design on the left.
+		</p>
 		<img src="images/draft_expl.png">
 	</div>
 	<img src="images/waffle.png"; style="height: 400px; transform: rotate('90deg');">
 	<br>
 	<div>
-		This is a fabric sample of the pattern draft above. You can see how the diamond forms in the draft translate
+		<p>This is a fabric sample of the pattern draft above. You can see how the diamond forms in the draft translate
 		to the actual weaving. This specific technique is called waffle weave, the visual effect and malleability 
 		that the diamond structurecreates comes as a result of a range of short->long warp and weft floats. In the 
 		pattern draft, the long horizontal stripes (weft) and vertical stripes (warp) show the floats, which are otherwise
 		typically something to avoid to prevent instability of the fabric or them catching on your surroundings.
+		</p>
 	</div>
 </div>
 <!--
