--- a/punch_lace.html
+++ b/punch_lace.html
@@ -55,8 +55,7 @@
 			background-repeat: no-repeat;
 			background-position: center;
 			background: url(images/desktop_background_knit.svg)
-		} 
-		*/
+		} */
 	</style>
 	<!--For the image float code from here https://www.w3schools.com/Css/tryit.asp?filename=trycss_float2-->
 </head>
@@ -83,7 +82,14 @@
 <!--ABOVE is the centered navbar
 breadcrumbs here with hyperlinks-->
 
-    <div class="main"><img style="width: 95%;" src="images/header_knit.png"></div>
+    <div class="main">
+		<p>
+			<a href="interactive_punchcard.html">
+			<img style="width: 95%;" src="images/punch_lace_header.png">
+			</a>
+		</p>
+
+	</div>
 
 	<h1>Punch Lace Knitting</h1>
 	<h2>Combining thicker yarn and sewing thread for lace-like fabric.</h2>
